# capicxx-dbus-tools

./: .gitattributes  .gitignore  CHANGES  INSTALL  Makefile  NEWS  README  README.html  README.md  index.html  params.json
.github/workflows/: maven.yml
CommonAPI-Examples/BlueZ/: .cproject  .project  CMakeLists.txt  README  commonapi4dbus.ini
CommonAPI-Examples/BlueZ/fidl/: org.bluez.fdepl  org.bluez.fidl
CommonAPI-Examples/BlueZ/src/: BlueZClient.cpp
CommonAPI-Examples/LegacyTest/: .project  CMakeLists.txt  README  runLegacyClientTest.sh  runLegacyServiceTest.sh
CommonAPI-Examples/LegacyTest/fidl/: LegacyTest.fdepl  LegacyTest.fidl
CommonAPI-Examples/LegacyTest/src/: LegacyTestClient.cpp  LegacyTestLegacyClient.c  LegacyTestLegacyService.c  LegacyTestService.cpp  LegacyTestStubImpl.cpp  LegacyTestStubImpl.hpp
CommonAPI-Examples/ObjectPathSimple/: .cproject  .project  CMakeLists.txt
CommonAPI-Examples/ObjectPathSimple/fidl/: ObjectPathSimple.fdepl  ObjectPathSimple.fidl
CommonAPI-Examples/ObjectPathSimple/src/: ObjectPathSimpleClient.cpp  ObjectPathSimpleService.cpp  ObjectPathSimpleStubImpl.cpp  ObjectPathSimpleStubImpl.hpp
CommonAPI-Examples/UDisks2/: .cproject  .gitignore  .project  CMakeLists.txt  README  commonapi4dbus.ini
CommonAPI-Examples/UDisks2/fidl/: org.freedesktop.UDisks2.fdepl  org.freedesktop.UDisks2.fidl
CommonAPI-Examples/UDisks2/src/: UDisks2Client.cpp
CommonAPI-Examples/VariantSimple/: .cproject  .project  CMakeLists.txt  README
CommonAPI-Examples/VariantSimple/fidl/: VariantSimple-DBus.fdepl  VariantSimple.fidl
CommonAPI-Examples/VariantSimple/src/: VariantSimpleClient.cpp  VariantSimpleService.cpp  VariantSimpleStubImpl.cpp  VariantSimpleStubImpl.hpp
docx/: .project  CommonAPIDBusCppUserGuide  Makefile
org.genivi.commonapi.dbus/: .classpath  .gitignore  .project  TODO  build.properties  pom.xml
org.genivi.commonapi.dbus.cli/: .project  plugin.xml  pom.xml
org.genivi.commonapi.dbus.cli.feature/: .project  feature.xml  pom.xml
org.genivi.commonapi.dbus.cli.product/: .project  commonapi_dbus_cli.product  pom.xml
org.genivi.commonapi.dbus.cli/src/org/genivi/commonapi/dbus/cli/: Activator.java  CommandLineHandlerDBus.java  CommandLineValidatorDBus.java  DBusCommandlineToolMain.java  FrancaResourceFactory.java
org.genivi.commonapi.dbus.feature/: .project  build.properties  category.xml  feature.properties  feature.xml  pom.xml
org.genivi.commonapi.dbus.releng/: .project  pom.xml
org.genivi.commonapi.dbus.target/: .project  org.genivi.commonapi.dbus.target.target  pom.xml
org.genivi.commonapi.dbus.tests/: .autotools  .gitignore  Makefile.am  configure.ac
org.genivi.commonapi.dbus.tests/src/: StubTest.h  test-derived-types.fidl  test-interface-proxy.fidl  test-interface-stub.cpp  test-polymorphic-interface-proxy.cpp  test-polymorphic-interface-stub.cpp  test-polymorphic-interface.fidl  test-predefined-types.fidl  test-proxy-attribute.cpp  test-proxy.cpp  test.fidl
org.genivi.commonapi.dbus.ui/: .project  plugin.xml  pom.xml
org.genivi.commonapi.dbus.ui/src/org/genivi/commonapi/dbus/ui/: CommonApiDBusUiPlugin.java  DBusCommandExecutableExtensionFactory.java
org.genivi.commonapi.dbus.updatesite/: .project  Build CommonAPI-DBus Tools.launch  Install CommonAPI-DBus Tools.launch  category.xml  pom.xml
org.genivi.commonapi.dbus.updatesite/composite_update_site/: compositeArtifacts.xml
org.genivi.commonapi.dbus.validator/: .project  plugin.xml  pom.xml
org.genivi.commonapi.dbus.validator.feature/: .project  feature.properties  feature.xml  pom.xml
org.genivi.commonapi.dbus.validator/src/org/genivi/commonapi/dbus/validator/: AllInfoMapsBuilder.java  Triple.java  ValidatorDBus.java  (+1 more)
org.genivi.commonapi.dbus.verification/: .gitignore  CMakeLists.txt  DBusGlue-uninstalled.pc  DBusGlue-uninstalled.pc.in  DBusGlue.pc  DBusGlue.pc.in  Makefile.am  README  build.sh  configure.ac  doit.sh
org.genivi.commonapi.dbus.verification/cmake/: DBusGlueConfig.cmake.in
org.genivi.commonapi.dbus.verification/src-gen/commonapi/tests/: DerivedTypeCollection.cpp  DerivedTypeCollection.h  PredefinedTypeCollection.h  TestInterface.h  TestInterfaceDBusProxy.cpp  TestInterfaceDBusProxy.h  TestInterfaceDBusStubAdapter.cpp  TestInterfaceDBusStubAdapter.h  TestInterfaceProxy.h  TestInterfaceProxyBase.h  TestInterfaceStub.h  TestInterfaceStubDefault.cpp  TestInterfaceStubDefault.h
org.genivi.commonapi.dbus/deployment/: CommonAPI-4-DBus_deployment_spec.fdepl  CommonAPI-DBus_deployment.fdepl  CommonAPI-DBus_deployment_spec.fdepl  deployment.fdepl
org.genivi.commonapi.dbus/src-gen/org/genivi/commonapi/dbus/: Deployment.java  DeploymentInterfacePropertyAccessor.java  DeploymentProviderPropertyAccessor.java  DeploymentTypeCollectionPropertyAccessor.java
org.genivi.commonapi.releng/: pom.xml
test/: .project  CMakeLists.txt  README.txt  test-commonapi-dbus.ini
test/fakeLegacyService/: fakeLegacyService.py  sendToFakeLegacyService.py
test/fidl/: fakeLegacyService.fdepl  objectPath.fdepl  objectPath.fidl  test-derived-types.fidl  test-freedesktop-interface.fdepl  test-freedesktop-interface.fidl  test-interface-proxy.fdepl  test-interface-proxy.fidl  unixfd.fdepl  unixfd.fidl  variantType.fdepl  variantType.fidl
test/src/: DBusAddressTranslatorTest.cpp  DBusBroadcastTest.cpp  DBusCommunicationTest.cpp  DBusFactoryTest.cpp  DBusFreedesktopPropertiesTest.cpp  DBusInputStreamTest.cpp  DBusLoadTest.cpp  DBusMainLoopIntegrationTest.cpp  DBusManagedTest.cpp  DBusMultipleConnectionTest.cpp  DBusObjectPathTest.cpp  DBusOutputStreamTest.cpp  DBusPolymorphicTest.cpp  DBusProxyTest.cpp  DBusRuntimeTest.cpp  DBusTestUtils.hpp  DBusUnixFDTest.cpp  DBusVariantTypeTest.cpp  DemoMainLoop.hpp
test/src/stubs/: ObjectPathStubImpl.cpp  ObjectPathStubImpl.hpp  TestInterfaceStubImpl.cpp  TestInterfaceStubImpl.hpp  UnixFDStubImpl.cpp  UnixFDStubImpl.hpp  VariantTypeStubImpl.cpp  VariantTypeStubImpl.hpp
updatesite/: compositeArtifacts.xml  compositeContent.xml
updatesite/3.1.11.2/: compositeArtifacts.xml
updatesite/3.1.9/: compositeContent.xml
(+21 files in other folders)
